<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/currentNumberView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="134dp"
        android:text="@string/edit_1"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/button_less"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:text="@string/button_1" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5" />

        <Button
            android:id="@+id/button_more"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:text="@string/button_2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentNumberView">

        <EditText
            android:id="@+id/editTextFirstNumber"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/edit_2"
            android:inputType="number"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editTextSecondNumber"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/edit_3"
            android:inputType="number"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="86dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Attempts"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/countAttemptView"
            android:layout_width="58dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="0"
            android:textSize="34sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>